[tool.poetry]
name = "repl_python3_audibot"
version = "0.1.0"
description = ""
authors = ["JustinTsai2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.1"
yt-dlp = "^2022.3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
